--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
         font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        background: #2e2e2e;
       }
 
       ::-webkit-scrollbar {
